[package]
name = "foc"
version = "0.3.0"
edition = "2021"
authors = ["Caleb Fletcher <caleb@fletcher.cf>"]
description = "An implementation of various Field Oriented Control algorithms."
repository = "https://github.com/calebfletcher/foc/"
homepage = "https://github.com/calebfletcher/foc/"
license = "MIT OR Apache-2.0"
keywords = ["foc", "bldc", "motor", "vector-control"]
categories = [
    "algorithms",
    "embedded",
    "science::robotics",
    "no-std",
    "no-std::no-alloc",
]

[dependencies]
document-features = "0.2"
defmt = { version = "1.0", optional = true }

[dev-dependencies]
libm = "0.2"

[features]
## Use [`defmt`](https://docs.rs/defmt/latest/defmt/) for logging
defmt = ["dep:defmt"]
